- Added footer with logo, links and contact info - Added dark mode support for footer - Fixed issue that caused white bar on the right side of the pages on smaller devices - Fixed an issue that caused the dark mode to not apply to the full page height, which caused a white bar between the router-outlet content and the footer - Code cleanup and other small fixes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,12 @@
 @import "tailwindcss/utilities";
 
 html, body {
+  min-height: 100vh;
+  height: auto;
   margin: 0;
-  height: 100%;
+  width: 100%;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 body {
@@ -23,50 +27,10 @@ body {
   border: none;
 }
 
-//body {
-//  --tw-bg-opacity: 1;
-//  --text-color: #222;
-//  --bkg-color: hsl(var(--b2, var(--b1)) / var(--tw-bg-opacity));
-//  --btn-txt-color: white;
-//  --btn-bg-color: rgb(11, 88, 160);
-//}
-//body.dark-theme {
-//  --text-color: #eee;
-//  --bkg-color: #000000;
-//  --btn-txt-color: rgb(46, 43, 43);
-//  --btn-bg-color: rgb(20, 211, 195);
-//}
-//
-//h1,
-//p {
-//  color: var(--text-color);
-//}
-//button {
-//  padding: 10px;
-//  border: none;
-//  border-radius: 2px;
-//  color: var(--btn-txt-color);
-//  background-color: var(--btn-bg-color);
-//}
-
-
-
-
-
-
-//body.dark-mode {
-//  background-color: #2d3436;
-//  color: #dfe6e9;
-//}
-//
-//body.light-mode {
-//  background-color: #dfe6e9;
-//  color: #2d3436;
-//}
-
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  //font-family: 'Roboto', sans-serif;
+  height: 100%;
 }
 
 h1 {
@@ -97,4 +61,25 @@ body.light-mode h1, body.light-mode h4 {
 
 .h1-col-override {
   color: #000000 !important;
+}
+
+.flex-wrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.logo-resize {
+  width: 25%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.centertext {
+  text-align: center;
+  width: 50%;
+  margin: 0 auto;
 }
